# lpi-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  SETUP.md  pyproject.toml
.github/: pull_request_template.md
data/: intern_profiles.json
docs/: aditi-proxy-data-plan.md
docs/logs/: 2026-06-01-daksh.md
docs/notes/: phase3_signals_prep.md
docs/qa/: day1_qa_setup.md  goal_endpoints_qa_matrix.md  june1_qa_setup.md  june1_swagger_review.md
reports/: TEMPLATE.md
src/lpi/: config.py  main.py  models.py  scoring.py  smile.py  store.py
src/lpi/middleware/: __init__.py  auth.py
src/lpi/routers/: goals.py  recommendations.py  signals.py
src/lpi/utils/: logging.py
supabase/: config.toml
supabase/migrations/: 20260604000000_create_goals.sql  20260605000000_create_goal_phase_transitions.sql  20260607000000_create_log_tables.sql  20260608000000_create_request_logs.sql  20260612000000_goals_rls.sql  20260613000000_logs_rls.sql
tests/: conftest.py  test_activity_signals.py  test_goal_crud.py  test_recommendations.py  test_scoring.py  test_smile.py  test_smoke.py
